# book_generator_tom

./: .gitignore  .gitmodules  CLAUDE.md  GETTING_STARTED.md  PROGRESS.md  README.md  TOM2.ipynb  config.yaml  dxf_3d.py  pyproject.toml  requirements.txt  sync_to_space.sh
.claude/: settings.json  setup-backlog.md  tooling-review.md
.claude/agents/: deploy-readiness-reviewer.md  geometry-auditor.md
.claude/commands/: a11y.md  check-sync.md  deploy-hf.md  gen-probe.md  hf-logs.md  new-page.md  preflight.md  regress.md  setup-retro.md  space-probe.md  stl-bench.md  verify-generate.md  web-verify.md
.claude/commands-pool/frontend/: design-lint.md  i18n-lint.md  printability.md  visual-regress.md
.claude/hooks/: sync-guard.py
.claude/instructions/: python.instructions.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/hebrew-braille-nikud/: SKILL.md
.claude/skills/hf-space-sync-deploy/: SKILL.md
.claude/skills/image-dxf-generation/: SKILL.md
.claude/skills/occt-crash-isolation/: SKILL.md
.claude/skills/tactile-stl-geometry/: SKILL.md
.claude/skills/web-backend-contract/: SKILL.md
.claude/skills/zerogpu-web-bridge/: SKILL.md
app/: app.py
notebooks/: text2stl_generator.ipynb
src/: README.md  config.py  dxf_3d.py  flow_manager.py  image_funcs.py  image_generator.py  language_funcs.py  lithophane.py
tools/: space_browser_test.mjs
web/: .env  .env.example  CLAUDE.md  IMPROVEMENTS.md  README.md  index.html  package-lock.json  package.json
web/api/: generate.js
web/fixtures/: sample-book.json
web/src/: App.jsx  index.css  main.jsx
(+22 files in other folders)
